Fix font, increase collapse time

--- a/main.css
+++ b/main.css
@@ -136,7 +136,7 @@ hr {
   padding: 1px;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  transition: max-height 1s ease-out;
   background-color: ;
 }
 
